# src/main/java/pl/greywarden/tutorial/resource/AuthorsResource.java
@@ -14,8 +14,10 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
 import pl.greywarden.tutorial.domain.dto.AuthorResponse;
 import pl.greywarden.tutorial.domain.dto.CreateAuthorRequest;
 import pl.greywarden.tutorial.domain.dto.UpdateAuthorRequest;
@@ -41,6 +43,12 @@ class AuthorsResource {
     @ResponseStatus(HttpStatus.CREATED)
     void createAuthor(@RequestBody @Valid CreateAuthorRequest createAuthorRequest) {
         authorsService.createAuthor(createAuthorRequest);
+    }
+
+    @PostMapping(value = "/upload", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    @ResponseStatus(HttpStatus.ACCEPTED)
+    void populateWithCSV(@RequestPart("file") MultipartFile csv) {
+        authorsService.populateWithCSV(csv);
     }
 
     @DeleteMapping("/{id}")
